# anchor

./: README.md
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  rust_template.rs
client/: Cargo.toml
client/example/: Cargo.toml
client/src/: cluster.rs
docs/src/pages/docs/: cli.md
idl/src/: build.rs
lang/: Cargo.toml
lang/syn/: Cargo.toml
lang/syn/src/idl/: defined.rs
spl/: Cargo.toml
tests/auction-house/programs/auction-house/: Cargo.toml
ts/tests/src/: utils.ts
