[package]
name = "anchor-client"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "An RPC client to interact with Anchor programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = []
debug = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.30.1" }
anyhow = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-account-decoder = { git = "https://github.com/openlab-openos/openos" ,package="solana-account-decoder" }
solana-client = { git = "https://github.com/openlab-openos/openos" ,package="solana-client" }
solana-sdk = { git = "https://github.com/openlab-openos/openos" ,package="solana-sdk" }
thiserror = "1.0.58"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"
