[package]
name = "anchor-spl"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["associated_token", "mint", "token", "token_2022", "token_2022_extensions"]
associated_token = ["spl-associated-token-account"]
dex = ["serum_dex"]
devnet = []
governance = []
idl-build = ["anchor-lang/idl-build"]
memo = ["spl-memo"]
metadata = ["mpl-token-metadata"]
mint = []
stake = ["borsh"]
token = ["spl-token"]
token_2022 = ["spl-token-2022"]
token_2022_extensions = ["spl-token-2022", "spl-token-group-interface", "spl-token-metadata-interface", "spl-pod"]

[dependencies]
anchor-lang = { path = "../lang", version = "0.30.1", features = ["derive"] }
borsh = { version = ">=0.9, <0.11", optional = true }
mpl-token-metadata = { version = "4", optional = true }
serum_dex = { git = "https://github.com/openbook-dex/program/", rev = "1be91f2", version = "0.4.0", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-associated-token-account" ,features = ["no-entrypoint"], optional = true}
spl-memo = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-memo" ,features = ["no-entrypoint"], optional = true}
spl-token = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token" ,features = ["no-entrypoint"], optional = true}
spl-token-2022 = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token-2022" , features = ["no-entrypoint"] , optional = true}
spl-token-group-interface = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token-group-interface"  , optional = true}
spl-token-metadata-interface = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-token-metadata-interface" ,  optional = true}
spl-pod = { git = "https://github.com/openlab-openos/open-token.git" ,package = "spl-pod" , optional = true}
